[gd_scene load_steps=5 format=3 uid="uid://hud_shadow_mask"]

[ext_resource type="Script" path="res://godot_ui/scripts/ui/HUD.gd" id="1_hud_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mask_icon_bg"]
bg_color = Color(0.1, 0.1, 0.1, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fever_bar_bg"]
bg_color = Color(0.86, 0.9, 0.94, 0.2)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fever_bar_fill"]
bg_color = Color(1.0, 0.78, 0.35, 0.95)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

; ============================================================
; HUD - æ¸¸æˆè¿›è¡Œæ—¶çš„ç•Œé¢
; åŒ…å«: åˆ†æ•°ã€Stageã€é¢å…·çŠ¶æ€ã€Feveræ¡ã€æ•™ç¨‹æç¤º
; ============================================================

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud_script")

; ============================================================
; é¡¶éƒ¨ HUD æ 
; ============================================================
[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 80.0
mouse_filter = 2

; ------------------------------------------------------------
; å·¦ä¾§ - åˆ†æ•°åŒºåŸŸ
; ------------------------------------------------------------
[node name="ScoreSection" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4
mouse_filter = 2

[node name="ScoreValue" type="Label" parent="TopBar/ScoreSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "0000"
horizontal_alignment = 0

[node name="ScoreLabel" type="HBoxContainer" parent="TopBar/ScoreSection"]
layout_mode = 2
theme_override_constants/separation = 8
mouse_filter = 2

[node name="SwordIcon" type="Label" parent="TopBar/ScoreSection/ScoreLabel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "âš”"

[node name="KillText" type="Label" parent="TopBar/ScoreSection/ScoreLabel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "å‡»æ€æ•°"

; ------------------------------------------------------------
; ä¸­é—´ - Stage æ˜¾ç¤º
; ------------------------------------------------------------
[node name="StageSection" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1
mouse_filter = 2

[node name="StageContainer" type="HBoxContainer" parent="TopBar/StageSection"]
layout_mode = 2
theme_override_constants/separation = 8
mouse_filter = 2

[node name="TargetIcon" type="Label" parent="TopBar/StageSection/StageContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "â—"

[node name="StageLabel" type="Label" parent="TopBar/StageSection/StageContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "STAGE 1"

; ------------------------------------------------------------
; å³ä¾§ - é¢å…·çŠ¶æ€ + Fever
; ------------------------------------------------------------
[node name="MaskSection" type="VBoxContainer" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 4
alignment = 2
mouse_filter = 2

[node name="MaskRow" type="HBoxContainer" parent="TopBar/MaskSection"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2
mouse_filter = 2

[node name="MaskStatus" type="Label" parent="TopBar/MaskSection/MaskRow"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "é¢å…·å®Œæ•´"
horizontal_alignment = 2

[node name="MaskIconContainer" type="PanelContainer" parent="TopBar/MaskSection/MaskRow"]
layout_mode = 2
custom_minimum_size = Vector2(36, 36)
theme_override_styles/panel = SubResource("StyleBoxFlat_mask_icon_bg")

[node name="MaskIcon" type="TextureRect" parent="TopBar/MaskSection/MaskRow/MaskIconContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 3
stretch_mode = 5

[node name="ShatteredKills" type="Label" parent="TopBar/MaskSection"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.8)
theme_override_font_sizes/font_size = 14
text = "é‡å¡‘æ‰€éœ€: 0/3"
horizontal_alignment = 2

[node name="FeverLabel" type="Label" parent="TopBar/MaskSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "FEVER"
horizontal_alignment = 2

; ------------------------------------------------------------
; Fever è¿›åº¦æ¡ (ç‹¬ç«‹äº MaskSection)
; ------------------------------------------------------------
[node name="FeverBarContainer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -174.0
offset_top = 90.0
offset_right = -24.0
offset_bottom = 114.0
mouse_filter = 2

[node name="FeverBarBg" type="Panel" parent="FeverBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fever_bar_bg")

[node name="FeverBarFill" type="Panel" parent="FeverBarContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fever_bar_fill")

[node name="FeverBadge" type="HBoxContainer" parent="FeverBarContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -12.0
offset_bottom = 12.0
theme_override_constants/separation = 8
mouse_filter = 2

[node name="FeverIcon" type="Label" parent="FeverBarContainer/FeverBadge"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.55, 0.95)
theme_override_font_sizes/font_size = 12
text = "ğŸ”¥"

[node name="FeverText" type="Label" parent="FeverBarContainer/FeverBadge"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.55, 0.95)
theme_override_font_sizes/font_size = 12
text = "FEVER"

; ============================================================
; åº•éƒ¨æ•™ç¨‹æç¤º
; ============================================================
[node name="TutorialHint" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
mouse_filter = 2

[node name="HintBg" type="PanelContainer" parent="TutorialHint"]
layout_mode = 2

[node name="HintMargin" type="MarginContainer" parent="TutorialHint/HintBg"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HintText" type="Label" parent="TutorialHint/HintBg/HintMargin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "WASDç§»åŠ¨ Â· ç‚¹å‡»é¼ æ ‡è“„åŠ›å†²åˆº Â· ç©¿è¿‡æ•Œäººè¿›è¡Œæ–©æ€"
